# greetd

./: .gitignore
agreety/: Cargo.toml
greetd/: Cargo.toml
