[package]
name = "greetd"
version = "0.6.0"
authors = ["Kenny Levinsen"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://kl.wtf/projects/greetd"
repository = "https://git.sr.ht/~kennylevinsen/greetd/"
readme = "../README.md"
description = "greetd is a minimal and flexible login manager daemon."

[features]
debug = []

[dependencies]
nix = "0.17"
pam-sys = "0.5.6"
users = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
greetd_ipc = { path = "../greetd_ipc", features = ["tokio-codec"] }
inish = { path = "../inish" }
libc = "0.2"
tokio = { version = "0.2", features = ["net", "sync", "macros", "signal", "rt-util", "io-util", "time"] }
getopts = "0.2"
thiserror = "1.0"
async-trait = "0.1"
enquote = "1.0.3"

[package.metadata.deb]
extended-description = "greetd is a minimal and flexible login manager daemon that makes no assumptions about what you want to launch."
provides = "x-display-manager"
maintainer-scripts = "../"
assets = [["../config.toml", "etc/", "644"], ["greetd", "usr/bin", "755"]]
conf-files = ["config.toml"]
systemd-units = { restart-after-upgrade = true }
